[gd_scene load_steps=29 format=3 uid="uid://v67gpa0c2rdm"]

[ext_resource type="Script" uid="uid://c7fml14t62ej7" path="res://scenes/game_object/player/player.gd" id="1_oul6g"]
[ext_resource type="PackedScene" uid="uid://bojlohyvov773" path="res://scenes/callable_state_machine/callable_state_machine.tscn" id="2_rgyib"]
[ext_resource type="PackedScene" uid="uid://c8qiyb0hv14it" path="res://scenes/components/health/health.tscn" id="2_yw30f"]
[ext_resource type="PackedScene" uid="uid://ba5chyifcbwsv" path="res://scenes/components/hurtbox/hurtbox.tscn" id="4_qjkh3"]
[ext_resource type="PackedScene" uid="uid://c5srpg1xw2dur" path="res://scenes/components/look/look.tscn" id="5_8t03j"]
[ext_resource type="PackedScene" uid="uid://c8vwlygwm1ac2" path="res://scenes/components/exp/exp.tscn" id="5_g6k8r"]
[ext_resource type="PackedScene" uid="uid://chqcr7r1nl7w7" path="res://scenes/ability/ability_Sword/controller/abilityController_Sword.tscn" id="5_gbew5"]
[ext_resource type="Script" uid="uid://bb5c06xlmd0fb" path="res://scenes/components/exp/exp.gd" id="6_boad6"]
[ext_resource type="PackedScene" uid="uid://bp71esg3p5br1" path="res://scenes/components/four_ways_control/four_ways_control.tscn" id="7_rgyib"]
[ext_resource type="PackedScene" uid="uid://2uyf81565djh" path="res://scenes/components/random_audio_player_2d/random_audio_player_2d.tscn" id="9_oxhc3"]
[ext_resource type="AudioStream" uid="uid://bubfyymrhx5q1" path="res://assets/audio/sfx/combat/impactMining_000.ogg" id="10_gme53"]
[ext_resource type="AudioStream" uid="uid://c4c0owy1ayoyu" path="res://assets/audio/sfx/combat/impactMining_001.ogg" id="11_3uig4"]
[ext_resource type="AudioStream" uid="uid://wtcu13wib54d" path="res://assets/audio/sfx/combat/impactMining_002.ogg" id="12_oxadg"]
[ext_resource type="AudioStream" uid="uid://bbs3dtdc23crm" path="res://assets/audio/sfx/combat/impactMining_003.ogg" id="13_va4cl"]
[ext_resource type="AudioStream" uid="uid://dfqkc118gryja" path="res://assets/audio/sfx/combat/impactMining_004.ogg" id="14_h0hb4"]
[ext_resource type="Texture2D" uid="uid://borku03gnfdcb" path="res://scenes/game_object/player/sprites/Idle2.png" id="16_3uig4"]
[ext_resource type="Texture2D" uid="uid://bp8mpnic1julv" path="res://scenes/game_object/player/sprites/Walk.png" id="17_oxadg"]
[ext_resource type="Texture2D" uid="uid://ksmt6b4abu8m" path="res://scenes/game_object/player/sprites/Jump.png" id="18_va4cl"]
[ext_resource type="PackedScene" uid="uid://dafwex3f4v7ui" path="res://scenes/game_object/weapons/staff_attack/staff_attack.tscn" id="19_oxadg"]

[sub_resource type="Curve" id="Curve_gbew5"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1e-05, 1), 0.0, 0.0, 0, 0, Vector2(2e-05, 1), 0.0, 0.0, 0, 0, Vector2(0.5, 0.5), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 5
metadata/_snap_count = 2

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2ieo8"]
radius = 3.0
height = 12.0

[sub_resource type="Animation" id="Animation_8t03j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("16_3uig4")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:region_rect")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 256, 32)]
}

[sub_resource type="Animation" id="Animation_hg6s5"]
resource_name = "player_idle"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("16_3uig4")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:region_rect")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 256, 32)]
}

[sub_resource type="Animation" id="Animation_2ieo8"]
resource_name = "player_run"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("17_oxadg")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:region_rect")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 128, 32)]
}

[sub_resource type="Animation" id="Animation_h0hb4"]
resource_name = "player_run_2"
length = 1.3
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.90000004, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("18_va4cl")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:region_rect")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 416, 32)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2ieo8"]
_data = {
&"RESET": SubResource("Animation_8t03j"),
&"player_idle": SubResource("Animation_hg6s5"),
&"player_run": SubResource("Animation_2ieo8"),
&"player_run_2": SubResource("Animation_h0hb4")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_oxadg"]
radius = 11.0

[sub_resource type="CircleShape2D" id="CircleShape2D_oxhc3"]
radius = 23.0

[node name="player" type="CharacterBody2D" node_paths=PackedStringArray("anim_player") groups=["Player"]]
texture_filter = 1
collision_layer = 2
motion_mode = 1
script = ExtResource("1_oul6g")
curve = SubResource("Curve_gbew5")
anim_player = NodePath("visuals/character_sprite/animation_player")

[node name="take_damage_timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[node name="callable_state_machine" parent="." instance=ExtResource("2_rgyib")]

[node name="health" parent="." instance=ExtResource("2_yw30f")]

[node name="component_FourWaysControl" parent="." instance=ExtResource("7_rgyib")]

[node name="abilities" type="Node" parent="."]

[node name="abilityController_Sword" parent="abilities" instance=ExtResource("5_gbew5")]
is_disabled = true
damage = 1.0
max_range = 100.0

[node name="look" parent="." node_paths=PackedStringArray("visual_node") instance=ExtResource("5_8t03j")]
is_base_sprite_looking_left = false
visual_node = NodePath("../visuals")

[node name="exp" parent="." instance=ExtResource("5_g6k8r")]
script = ExtResource("6_boad6")

[node name="hit_sfx" parent="." instance=ExtResource("9_oxhc3")]
unique_name_in_owner = true
max_distance = 300.0
streams = Array[AudioStream]([ExtResource("10_gme53"), ExtResource("11_3uig4"), ExtResource("12_oxadg"), ExtResource("13_va4cl"), ExtResource("14_h0hb4")])

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CapsuleShape2D_2ieo8")

[node name="visuals" type="Node2D" parent="."]

[node name="character_sprite" type="Sprite2D" parent="visuals"]
unique_name_in_owner = true
position = Vector2(0, -12)
scale = Vector2(0.75, 0.75)
texture = ExtResource("16_3uig4")
hframes = 8
region_enabled = true
region_rect = Rect2(0, 0, 256, 32)

[node name="animation_player" type="AnimationPlayer" parent="visuals/character_sprite"]
libraries = {
&"": SubResource("AnimationLibrary_2ieo8")
}

[node name="hurtbox" parent="." instance=ExtResource("4_qjkh3")]
collision_layer = 2
collision_mask = 0
enable_take_damage_cooldown = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(0, -11)
shape = SubResource("CircleShape2D_oxadg")
debug_color = Color(0.297, 0.5281499, 0.9, 0)

[node name="lootbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="collision_shape_2d" type="CollisionShape2D" parent="lootbox"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_oxhc3")
debug_color = Color(0.58, 0.55679995, 0.11599999, 0)

[node name="weapons" type="Node2D" parent="."]

[node name="staff_attack" parent="weapons" instance=ExtResource("19_oxadg")]
